Added html elemnts, some styling, and made the card class

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="style.css">
-
-  <script src="script.js"></script>
+  <script defer src="script.js"></script>
 
   <title>Game Project</title>
 </head>
 <body>
-  
+  <h1>Game Project</h1>
+  <div id="game-container">
+    <div id="top" class="stack"></div>
+    <div id="main-stage"></div>
+    <div id="bottom" class="stack"></div>
+  </div>
 </body>
 </html>
