--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
   <title>Game Project</title>
 </head>
 <body>
-  <div id="game-container">
+  <div id="game-container" class="container">
     <div id="top" class="stack"></div>
-    <div id="main-stage"></div>
+    <div id="main-stage" class="stage">
+      <div id="p1-choice" class="choices"></div>
+      <div id="p2-choice" class="choices"></div>
+    </div>
     <div id="bottom" class="stack"></div>
   </div>
 </body>
