--- a/index.html
+++ b/index.html
@@ -12,12 +12,26 @@
 </head>
 <body>
   <div id="game-container" class="container">
-    <div id="top" class="stack"></div>
+    <div id="top" class="stack">
+      <div class="win-stack">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div class="golden-troop"></div>
+      </div>
+    </div>
     <div id="main-stage" class="stage">
       <div id="p1-choice" class="choices"></div>
       <div id="p2-choice" class="choices"></div>
     </div>
-    <div id="bottom" class="stack"></div>
+    <div id="bottom" class="stack">
+      <div class="win-stack">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div class="golden-troop"></div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
