Modified current player structure to be a class

--- a/index.html
+++ b/index.html
@@ -12,26 +12,38 @@
 </head>
 <body>
   <div id="game-container" class="container">
-    <div id="top" class="stack">
+
+    <div id="top" class="player">
+      <div class="health"></div>
+
       <div class="win-stack">
         <div></div>
         <div></div>
         <div></div>
         <div class="golden-troop"></div>
       </div>
+
+      <div class="stack"></div>
     </div>
+
     <div id="main-stage" class="stage">
       <div id="p1-choice" class="choices"></div>
       <div id="p2-choice" class="choices"></div>
     </div>
-    <div id="bottom" class="stack">
+
+    <div id="bottom" class="player">
+      <div class="health"></div>
+
       <div class="win-stack">
         <div></div>
         <div></div>
         <div></div>
         <div class="golden-troop"></div>
       </div>
+
+      <div class="stack"></div>
     </div>
+
   </div>
 </body>
 </html>
