--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <div class="health"></div>
 
       <div class="win-stack">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div class="golden-troop"></div>
+        <div class="winner"></div>
+        <div class="winner"></div>
+        <div class="winner"></div>
+        <div class="winner golden-troop"></div>
       </div>
 
       <div class="stack"></div>
@@ -35,10 +35,10 @@
       <div class="health"></div>
 
       <div class="win-stack">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div class="golden-troop"></div>
+        <div class="winner"></div>
+        <div class="winner"></div>
+        <div class="winner"></div>
+        <div class="winner golden-troop"></div>
       </div>
 
       <div class="stack"></div>
