Health and health bar now go down after each attack

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <div id="game-container" class="container">
 
     <div id="top" class="player">
-      <div class="health"></div>
+      <div class="health">
+        <div class="bar"></div>
+      </div>
 
       <div class="win-stack">
         <div class="winner"></div>
@@ -32,7 +34,9 @@
     </div>
 
     <div id="bottom" class="player">
-      <div class="health"></div>
+      <div class="health">
+        <div class="bar"></div>
+      </div>
 
       <div class="win-stack">
         <div class="winner"></div>
