Added how to screen in main menu with a dismiss button

--- a/index.html
+++ b/index.html
@@ -5,49 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="style.css">
-  <script defer src="script.js"></script>
+  <link rel="stylesheet" href="./style.css">
 
-  <title>Game Project</title>
+  <script defer src="./index.js"></script>
+
+  <title>Battle Card - Menu</title>
 </head>
 <body>
-  <div id="game-container" class="container">
-
-    <div id="top" class="player">
-      <div class="health">
-        <div class="bar"></div>
-      </div>
-
-      <div class="win-stack">
-        <div class="winner"></div>
-        <div class="winner"></div>
-        <div class="winner"></div>
-        <div class="winner golden-troop"></div>
-      </div>
-
-      <div class="stack"></div>
-    </div>
-
-    <div id="main-stage" class="stage">
-      <div id="p1-choice" class="choices"></div>
-      <div id="p2-choice" class="choices"></div>
-    </div>
-
-    <div id="bottom" class="player">
-      <div class="health">
-        <div class="bar"></div>
-      </div>
-
-      <div class="win-stack">
-        <div class="winner"></div>
-        <div class="winner"></div>
-        <div class="winner"></div>
-        <div class="winner golden-troop"></div>
-      </div>
-
-      <div class="stack"></div>
-    </div>
-
-  </div>
+  <h1>Battle Cards</h1>
+  <button id="play-btn" class="btn">Play</button>
+  <button id="how-btn" class="btn">How To Play</button>
 </body>
 </html>
