Added computer that chooses random card after a certain amount of time

--- a/game.html
+++ b/game.html
@@ -23,7 +23,7 @@
         <div class="winner"></div>
         <div class="winner"></div>
         <div class="winner"></div>
-        <div class="winner golden-troop"></div>
+        <div class="winner"></div>
       </div>
 
       <div class="stack"></div>
@@ -43,7 +43,7 @@
         <div class="winner"></div>
         <div class="winner"></div>
         <div class="winner"></div>
-        <div class="winner golden-troop"></div>
+        <div class="winner"></div>
       </div>
 
       <div class="stack"></div>
