--- a/game.html
+++ b/game.html
@@ -13,6 +13,7 @@
 </head>
 <body>
   <div id="game-container" class="container">
+    <button id="pause-btn" class="btn">Pause</button>
 
     <div id="top" class="player">
       <div class="health">
