--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
   <title>Battle Card - Menu</title>
 </head>
 <body>
-  <h1>Battle Cards</h1>
-  <button id="play-btn" class="btn">Play</button>
-  <button id="how-btn" class="btn">How To Play</button>
+  <div class="main-menu">
+    <h1>Battle Cards</h1>
+    <div class="inputs">
+      <button id="play-btn" class="btn">Play</button>
+      <button id="how-btn" class="btn">How To Play</button>
+    </div>
+  </div>
 </body>
 </html>
